Ajusta healthcheck de master para nuevas versiones
En versiones superiores a v3.43 no acaba de arrancar el servicio master
a causa del healthcheck, porque el cluster no está listo y no puede
estarlo hasta que el servicio esté saludable. Se ajusta para permitir el
arranque.

--- a/deploy/docker-compose.tmpl.yml
+++ b/deploy/docker-compose.tmpl.yml
@@ -32,7 +32,7 @@ services:
     volumes:
       - master-vol:${DATA_PATH}
     healthcheck:
-      test: wget --spider -q http://127.0.0.1:${MASTER_PORT}/cluster/healthz
+      test: wget -q -O - http://127.0.0.1:${MASTER_PORT}/cluster/status
       interval: ${HEALTHCHECK_INTERVAL}
       timeout: ${HEALTHCHECK_TIMEOUT}
       retries: ${HEALTHCHECK_RETRIES}
